k8s/Apricotka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apricotka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apricotka
  template:
    metadata:
     labels:
       app: apricotka
    spec:
      containers:
        - image: apricotka:01
          imagePullPolicy: Never
          name: apricotka
          ports:
            - containerPort: 80
