k8s/Apricotka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apricotka-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: apricotka
